--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-time-graph",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A Vue.js component to create a time serie graph with filters",
   "main": "dist/vue-time-graph.js",
   "scripts": {
@@ -11,6 +11,10 @@
   "dependencies": {
     "vue-chartjs": "^3.4.0",
     "vuetify": "^1.4.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pacho950609/vue-time-graph"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
